# harbour-sailify

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  harbour-sailify.desktop  harbour-sailify.pro
dev/: generate-icons.sh
qml/: harbour-sailify.qml  spotifyUtils.js
qml/components/: AlbumTrackListItem.qml  CurrentlyPlayingMetadata.qml  CurrentlyPlayingPanel.qml  HttpCache.qml  KeyValueStorage.qml  LastSearchResultsRepo.qml  Mpris2Adapter.qml  NavigationItem.qml  NetworkMonitor.qml  Object.qml  PageListView.qml  ResultListItem.qml
qml/components/api/: HttpRequest.qml  SpotifyWebApiListModel.qml  SpotifyWebApiRequest.qml
qml/cover/: CoverPage.qml
qml/pages/: AboutPage.qml  AlbumPage.qml  ArtistPage.qml  CurrentlyPlayingPage.qml  Discography.qml  ErrorPage.qml  FirstPage.qml  LoginErrorPage.qml  LoginPage.qml  LoginProgressPage.qml  MainNavigationPage.qml  PlaylistsPage.qml  SavedTracksPage.qml  SearchPage.qml  SecondPage.qml  SettingsPage.qml  TopTracksPage.qml
rpm/: harbour-sailify.spec
sailfishapp/: Cargo.toml  build.rs
sailfishapp/src/: lib.rs
src/: lib.rs  librespot_main.rs  main.rs  sailify-config.cpp  sailify-config.cpp.in  sailify-config.h  sailify-player.cpp  sailify-player.h  sailify.cpp
src/common/: jslistmodel.cpp  jslistmodel.h  jsonlistmodel.cpp  jsonlistmodel.h
src/player/: bindings.rs  controller.rs  error.rs  events.rs  mod.rs  options.rs  qobject.rs  qtgateway.rs  runtime.rs
src/utils/: mod.rs  xdg.rs  xdg_base_dirs.rs
