[package]
name = "sailify"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "A Spotify client for Sailfish OS focused on usability and stability"
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# librespot
librespot-connect = "^0.1.3"
librespot-core = "^0.1.3"
librespot-playback = { version = "^0.1.3", default-features = false, features = ["pulseaudio-backend"]}
tokio-core = "0.1"
tokio-io = "0.1"
futures = { version = "0.3", features = ["compat"], default-features = false }
futures_01 = { version = "0.1", package = "futures" }
sha-1 = "0.8"
url = "1.7"
hex = "0.3"

# lib
quick-error = "2"
reqwest = "^0.9.24"

# rust app
log = "0.4"
env_logger =  { version = "^0.8.1", default-features = false, features = ["termcolor", "atty"]}

# qt app
qt5qml = { git = "https://github.com/R1tschY/qobject-rs.git", rev = "e537ce91" }
sailfishapp = { path = "sailfishapp" }

[build-dependencies]
qobject-compiler = { git = "https://github.com/R1tschY/qobject-rs.git", rev = "e537ce91"}
qt5qml = { git = "https://github.com/R1tschY/qobject-rs.git", rev = "e537ce91"}
pkg-config = "0.3"