[package]
name = "sailifyplayer"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "A Spotify client for Sailfish OS focused on usability and stability"
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# librespot
librespot-connect = "^0.1.6"
librespot-core = "^0.1.6"
librespot-playback = { version = "^0.1.6", default-features = false, features = ["pulseaudio-backend"]}
tokio-core = "0.1"
tokio-io = "0.1"
futures = { version = "0.3", features = ["compat"], default-features = false }
futures_01 = { version = "0.1", package = "futures" }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
os-release = "0.1"

quick-error = "2"
log = "0.4"

env_logger = "0.9.0"