[package]
name = "sailifyplayer"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "A Spotify client for Sailfish OS focused on usability and stability"
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
# librespot
librespot-connect = "^0.3.1"
librespot-core = "^0.3.1"
librespot-playback = { version = "^0.3.1", default-features = false, features = ["pulseaudio-backend"]}
protobuf = "^2.25.2"

# async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
futures = { version = "0.3", default-features = false }

# device name and ID
os-release = "0.1"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

# utils
quick-error = "2"
log = "0.4"
env_logger = "0.9.0"